--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch api/execute.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && cp -r api dist/api",
     "start": "node dist/api/execute.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
