--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "builds": [
     { "src": "api/**/*.ts", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
