--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "builds": [
-    { "src": "api/**/*.ts", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
-  ]
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs22.x"
+    }
+  },
+  "ignoreCommand": "echo Using root api directory"
 }
