--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "types": ["node"],
     "outDir": "dist"
   },
-  "include": ["llm", "fourspace", "api"]
+  "include": ["llm", "fourspace", "api", "server", "utils" ],
 }
