--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "dependencies": {
-    "@google/genai": "^1.17.0",
-    "@hono/node-server": "^1.19.1",
-    "dotenv": "^17.2.2",
-    "hono": "^4.9.6",
-    "zod": "^4.1.5"
-  },
   "name": "llm-restaurant",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch api/execute.ts",
     "build": "tsc -p tsconfig.json && cp -r api dist/api",
@@ -18,10 +13,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "type": "module",
+  "dependencies": {
+    "@google/genai": "^1.17.0",
+    "@hono/node-server": "^1.19.1",
+    "dotenv": "^17.2.2",
+    "hono": "^4.9.6",
+    "zod": "^4.1.5"
+  },
   "devDependencies": {
     "@types/node": "^24.3.1",
     "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
