--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@hono/node-server": "^1.19.1",
     "dotenv": "^17.2.2",
     "hono": "^4.9.6",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "@types/node": "^20.14.9"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
