--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch api/execute.ts",
-    "build": "tsc -p tsconfig.json && cp -r api dist/api",
+    "build": "npm install && tsc -p tsconfig.json && cp -r api dist/api",
     "start": "node dist/api/execute.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
