--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch api/execute.ts",
-    "build": "npm install && tsc -p tsconfig.json && cp -r api dist/api",
+    "build": "tsc -p tsconfig.json && cp -r api dist/api",
     "start": "node dist/api/execute.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,10 +19,10 @@
     "dotenv": "^17.2.2",
     "hono": "^4.9.6",
     "zod": "^4.1.5",
-    "@types/node": "^20.14.9"
+    "@types/node": "^20.14.9",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@types/node": "^24.3.1",
     "typescript": "^5.9.2"
   },
   "engines": {
